[package]
name = "cyberterm-img"
version = "0.1.0"
edition = "2021"
author = ["Liangdi <wu@liangdi.me>"]
description = "Image processing tool"
license = "MIT"
homepage = "https://cyberterm.org"
repository = "https://github.com/cyberterm-org/img"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = "4.2.1"
mime = "0.3.17"
mime_guess = "2.0.4"
